# securelink

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
docs/: THREAT_MODEL.md  securelink_protocol.md
inc/: byte_order.hpp  connection.hpp  constants.hpp  crypto_engine.h  error_handler.hpp  fingerprint.hpp  framing.hpp  hexdump.hpp  key_rotation.hpp  logger.hpp  protocol_handler.hpp  rate_limiter.hpp  replay_guard.hpp  session_log.hpp  tcp_server.hpp
scripts/: format.sh
src/: crypto_engine.c  logger.cpp  main.cpp  protocol_handler.cpp  session_log.cpp  tcp_server.cpp  test_client.cpp  test_crypto.c
